--- a/csRenamer/MainWindow.xaml
+++ b/csRenamer/MainWindow.xaml
@@ -13,8 +13,9 @@
             <StatusBarItem HorizontalContentAlignment="Stretch">
                 <Grid HorizontalAlignment="Stretch">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="2*"/>
-                        <ColumnDefinition Width="100"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="70"/>
+                        <ColumnDefinition Width="22"/>
                         <ColumnDefinition Width="160"/>
                     </Grid.ColumnDefinitions>
 
@@ -28,7 +29,9 @@
                         <TextBlock x:Name="filesText" Text="0" />
                     </StackPanel>
 
-                    <ProgressBar Grid.Column="2" x:Name="progressBar" Width="150" Height="14" Minimum="0" Maximum="100" IsIndeterminate="False" Margin="0,0,0,3"/>
+                    <Button Grid.Column="2" x:Name="stopButton" Content="{StaticResource StopIcon}" Width="16" Height="16" HorizontalAlignment="Right" Style="{StaticResource CloseButton}" Margin="0,0,5,3" Click="stopButton_Click" Visibility="Collapsed"/>
+
+                    <ProgressBar Grid.Column="3" x:Name="progressBar" Width="150" Height="14" Minimum="0" Maximum="100" IsIndeterminate="False" Margin="0,0,0,3"/>
 
 
                 </Grid>
