--- a/csRenamer/Resources/Icons.xaml
+++ b/csRenamer/Resources/Icons.xaml
@@ -85,6 +85,19 @@
         </DrawingImage.Drawing>
     </DrawingImage>
     
+    <!-- Stop Icon -->
+    <DrawingImage x:Key="StopIcon">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V24 H24 V0 H0 Z">
+                <GeometryDrawing Geometry="F1 M24,24z M0,0z M6,6L18,6 18,18 6,18 6,6z">
+                    <GeometryDrawing.Pen>
+                        <Pen Brush="#FF000000" Thickness="1.5" StartLineCap="Round" EndLineCap="Round" LineJoin="Round" MiterLimit="1" />
+                    </GeometryDrawing.Pen>
+                </GeometryDrawing>
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
     <!-- Question Icon -->
     <DrawingImage x:Key="QuestionIcon">
         <DrawingImage.Drawing>
