--- a/csRenamer/App.xaml
+++ b/csRenamer/App.xaml
@@ -2,8 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:csRenamer"
+             xmlns:converters="clr-namespace:csRenamer.Converters"
              StartupUri="MainWindow.xaml">
-    <Application.Resources>
+    <Application.Resources>        
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Colors.xaml"/>
@@ -11,8 +12,9 @@
                 <ResourceDictionary Source="Resources/Icons.xaml"/>
             </ResourceDictionary.MergedDictionaries>
 
-            <local:PathToIconConverter x:Key="PathToIconConverter"/>
-        </ResourceDictionary>         
+            <converters:PathToIconConverter x:Key="PathToIconConverter" />
+            <converters:BooleanNegationConverter x:Key="NegateBool" />
+        </ResourceDictionary>       
     </Application.Resources>
     
 </Application>
