--- a/csRenamer/MainWindow.xaml
+++ b/csRenamer/MainWindow.xaml
@@ -378,7 +378,7 @@
                                         <ColumnDefinition Width="*"/>
                                     </Grid.ColumnDefinitions>
                                     <TextBlock Grid.Column="0" Text="New file name"/>
-                                    <TextBox Grid.Column="1" Margin="10,0,10,0" Height="24" />
+                                    <TextBox Grid.Column="1" Margin="10,0,10,0" Height="24" x:Name="manualRenameText" />
                                 </Grid>
                                 <TextBlock Text="Select the file to rename, change its name and click Preview" Margin="0,5" FontStyle="Italic"/>
                             </StackPanel>
