Add clear and rename functionality to MainWindow
Updated MainWindow.xaml to include Click event handlers for "Clear" and "Rename" buttons.
Implemented clearButton_Click to reset file names and renameButton_Click to invoke the new RenameFiles method in FileServices.
The RenameFiles method validates and processes file renaming, ensuring existing names are checked and exceptions are handled.

--- a/csRenamer/MainWindow.xaml
+++ b/csRenamer/MainWindow.xaml
@@ -144,9 +144,9 @@
                         <Button Content="Preview" Margin="0,0,0,5" Style="{StaticResource ButtonWithText}" Tag="{StaticResource SearchIcon}" Width="90" Background="{StaticResource Button}"
                                 BorderBrush="{StaticResource ButtonBorder}" x:Name="previewButton" Click="previewButton_Click"/>
                         <Button Content="Clear" Margin="0,0,0,5" Style="{StaticResource ButtonWithText}" Tag="{StaticResource ClearIcon}" Width="90" Background="{StaticResource Button}"
-                                BorderBrush="{StaticResource ButtonBorder}" x:Name="clearButton"/>
+                                BorderBrush="{StaticResource ButtonBorder}" x:Name="clearButton" Click="clearButton_Click"/>
                         <Button Content="Rename" Margin="0,0,0,5" Style="{StaticResource ButtonWithText}" Tag="{StaticResource RenameIcon}" Width="90" Background="{StaticResource Button}"
-                                BorderBrush="{StaticResource ButtonBorder}" x:Name="renameButton"/>
+                                BorderBrush="{StaticResource ButtonBorder}" x:Name="renameButton" Click="renameButton_Click"/>
                         <Button Content="Quit" Style="{StaticResource ButtonWithText}" Tag="{StaticResource QuitIcon}"  Width="90" Background="{StaticResource Button}"
                                 BorderBrush="{StaticResource ButtonBorder}" x:Name="quitButton" Click="quitButton_Click"/>
                     </StackPanel>
